== Olupis Major change log ==
https://github.com/JiroCab/Olupis
Last updated on 25/09/2023 (+8utc) by Jirocab/RushieWashie

= Version 1-6 () =
    + Made planets be hidden until a sector is unlocked for it
    + Weather added: acidRain, mossMist
    + Blocks added: glowBloom, luminiteBoulder, obliterator, navalConstruct
    + Maps added: vakinyaDesert
    ~ Maps updated: forestOfHope, sanctuary, dormantCell
    ~ Added in-map credits for the maps above
    ~ Sprites updated: olupis-tree, moss-tree, rustElectrolyzer, ironConveyor, ironBridge
    ~ Sprites Contributed by kapzduke: pipeJuntion, pipeRouter, ironPipe, leadPipe, WindMill, Corroder, rustyDrill, displacementPump, ironPump, rustyPump, rustElectrolyzer, iron (item), rustyIron (item) [https://github.com/kapzduke]
    ~ Maps Contributed MrApple: vakinyaDesert, muddyRivers
    ~ improved shadows of various props
    ~ Finalized shredder & dissolver
    ~ Pipes has been reworked, made better for longer distance in exchange for lower capacity
    ~ Conveyor & Bridges speed increased, from half of serpulo counterparts to about 70-75%~
    ~ Gnats & Phorid now deal damage on death
    ~ Moved hydroMill to post-cobalt
    ~ Improved Shredder's bullet's detection
    ~ Improved Tech tree, new player experience, buildSpeed
    ~ Bug Fix: Constructs not spawning units on maps without cores despite being on the wave team
    ~ Bug Fix: Embryo Timing out if it has no a parent (for waves)
    ~ Internal: Expanded Credits

= Version 1-5 (9128c69) = https://github.com/JiroCab/Olupis/tree/9128c69cd59afeb49ec9c0d403352f2efbc41f38
    + Added more music from the Terra Nil Soundtrack by Meydän
    + Maps added: sanctuary, dorment-cell, forest-of-hope
    + Units added: aero, striker, venom, phorid, phantom, banshee, embryo, bay, blitz
    + Blocks added: lumaWall, redSandBoulder, rustedBridge, avenger, arialConstruct, groundConstruct, analogProcessor, mechanicalSwitch, mechanicalRegistry