@@ -3,13 +3,14 @@ https://github.com/JiroCab/Olupis
 Last updated on 25/09/2023 (+8utc) by Jirocab/RushieWashie
 
 = Version 1-6 () =
+    + Support/Ammo limited units have ammo visual indicators
     + Made planets be hidden until a sector is unlocked for it
     + Weather added: acidRain, mossMist
     + Blocks added: glowBloom, luminiteBoulder, obliterator, navalConstruct
     + Maps added: vakinyaDesert
     ~ Maps updated: forestOfHope, sanctuary, dormantCell
     ~ Added in-map credits for the maps above
-    ~ Sprites updated: olupis-tree, moss-tree, rustElectrolyzer, ironConveyor, ironBridge
+    ~ Sprites updated: olupis-tree, moss-tree, rustElectrolyzer, ironConveyor, ironBridge, phantom
     ~ Sprites Contributed by kapzduke: pipeJuntion, pipeRouter, ironPipe, leadPipe, WindMill, Corroder, rustyDrill, displacementPump, ironPump, rustyPump, rustElectrolyzer, iron (item), rustyIron (item) [https://github.com/kapzduke]
     ~ Maps Contributed MrApple: vakinyaDesert, muddyRivers
     ~ improved shadows of various props
